--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,34 +3,17 @@ services:
     container_name: hass
     image: "ghcr.io/home-assistant/home-assistant:stable"
     restart: always
-    privileged: false
     network_mode: host
     volumes:
-      - "./homeAssistant/data:/config"
-      - "./homeAssistant/hacs/huawei_solar:/config/custom_components/huawei_solar"
-      - "./homeAssistant/hacs/huawei_solar_pees/packages:/config/packages"
-    #devices:
-      #- "/dev/ttyUSB0:/dev/ttyUSB0"
+      - "./hass/data:/config"
+      #- "./hacs/huawei_solar:/config/custom_components/huawei_solar"
+      #- "./hacs/huawei_solar_pees/packages:/config/packages"
+    devices:
+      - "/dev/ttyUSB0:/dev/ttyUSB0"
     environment:
-      TZ: Europe/Berlin
-    labels:
-      - com.centurylinklabs.watchtower.enable=true
-
-  mosquitto:
-    container_name: mosquitto
-    image: eclipse-mosquitto
-    restart: always
-    networks:
-      - hass-net
-    ports:
-      - 1883:1883
-      - 1884:1884
-    volumes:
-      - ./mosquitto/config:/mosquitto/config
-      - ./mosquitto/data:/mosquitto/data
-      - ./mosquitto/log:/mosquitto/log
-    environment:
-      TZ: Europe/Berlin
+      - PUID=1000
+      - PGID=1000
+      - TZ=Europe/Berlin
     labels:
       - com.centurylinklabs.watchtower.enable=true
 
@@ -40,11 +23,35 @@ services:
     restart: always
     network_mode: host
     volumes:
-      - "./homeAssistant/matter/data:/data"
+      - "./matter/data:/data"
     environment:
+      - PUID=1000
+      - PGID=1000
       - TZ=Europe/Berlin
     labels:
       - com.centurylinklabs.watchtower.enable=true
+
+
+  mosquitto:
+    container_name: mosquitto
+    image: eclipse-mosquitto
+    restart: always
+    networks:
+      - hass-net
+    ports:
+      - 1883:1883
+      - 9001:9001
+    volumes:
+      - ./mosquitto/config:/mosquitto/config
+      - ./mosquitto/data:/mosquitto/data
+      - ./mosquitto/log:/mosquitto/log
+    environment:
+      - PUID=1000
+      - PGID=1000
+      - TZ=Europe/Berlin
+    labels:
+      - com.centurylinklabs.watchtower.enable=true
+
 
 networks:
     hass-net:
