--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,8 +6,8 @@ services:
     network_mode: host
     volumes:
       - "/opt/homeAssistant/data:/config"
-      #- "/opt/homeAssistant/hacs/huawei_solar:/config/custom_components/huawei_solar"
-      #- "/opt/homeAssistant/hacs/huawei_solar_pees/packages:/config/packages"
+      - "/opt/homeAssistant/hacs/huawei_solar:/config/custom_components/huawei_solar"
+      - "/opt/homeAssistant/hacs/huawei_solar_pees/packages:/config/packages"
     devices:
       - "/dev/ttyUSB0:/dev/ttyUSB0"
     environment:
@@ -27,7 +27,6 @@ services:
     labels:
       - com.centurylinklabs.watchtower.enable=true
 
-
   mosquitto:
     container_name: mosquitto
     image: eclipse-mosquitto
@@ -46,6 +45,22 @@ services:
     labels:
       - com.centurylinklabs.watchtower.enable=true
 
+  signal-cli-rest-api:
+    container_name: signal-cli
+    image: bbernhard/signal-cli-rest-api:latest
+    restart: always
+    networks:
+      - hass-net
+    ports:
+      - "8080:8080"
+    volumes:
+      # map "signal-cli-config" folder on host system into docker container. the folder contains the password and cryptographic keys when a new number is registered
+      - "/opt/homeAssistant/signal-cli-config:/home/.local/share/signal-cli"
+    environment:
+      - TZ=Europe/Berlin
+      - MODE=json-rpc #supported modes: json-rpc, native, normal. json-prc is recommended for speed
+    labels:
+      - com.centurylinklabs.watchtower.enable=true
 
 networks:
     hass-net:
