Diverse Änderungen - Abschaltung Computer wieder auf 8W korrigiert - Umwälzpumpen-Automatisierungen entfernt (Wegfall wegen Umstieg auf Wärmepumpe) - Neuer Helper für PV-Dach Tagesertrag mit Automatisierungen - import-statistics aus HACS eingebunden - Dashboard-Anpassungen

--- a/data/automations.yaml
+++ b/data/automations.yaml
@@ -19,7 +19,7 @@
       minutes: 1
       seconds: 0
     below: 8
-    id: consumption below 8w
+    id: consumption low
     trigger: numeric_state
   conditions: []
   actions:
@@ -27,7 +27,7 @@
     - conditions:
       - condition: trigger
         id:
-        - consumption below 8w
+        - consumption low
       sequence:
       - data: {}
         target:
@@ -193,46 +193,6 @@
     data: {}
     target:
       entity_id: switch.kuhlschrank_keller
-  mode: single
-- id: '1736887644744'
-  alias: Umwälzpumpe an gem. Zeitplan
-  description: ''
-  triggers:
-  - trigger: state
-    entity_id:
-    - schedule.zeitplan_umwalpumpe_regular
-    to: 'on'
-  - trigger: state
-    entity_id:
-    - schedule.zeitplan_umwalzpumpe_minimal
-    to: 'on'
-  conditions: []
-  actions:
-  - action: switch.turn_on
-    metadata: {}
-    data: {}
-    target:
-      entity_id: switch.umwalzpumpe
-  mode: single
-- id: '1736887804625'
-  alias: Umwälzpumpe aus gem. Zeitplan
-  description: ''
-  triggers:
-  - trigger: state
-    entity_id:
-    - schedule.zeitplan_umwalpumpe_regular
-    to: 'off'
-  - trigger: state
-    entity_id:
-    - schedule.zeitplan_umwalzpumpe_minimal
-    to: 'off'
-  conditions: []
-  actions:
-  - action: switch.turn_off
-    metadata: {}
-    data: {}
-    target:
-      entity_id: switch.umwalzpumpe
   mode: single
 - id: '1736888425441'
   alias: Heizung Urlaubsmodus an
@@ -691,4 +651,70 @@
     data: {}
     target:
       entity_id: input_boolean.e_auto_laden
+  mode: single
+- id: '1738524132549'
+  alias: PV Dach Tagesertrag speichern
+  description: ''
+  triggers:
+  - trigger: state
+    entity_id:
+    - sensor.pv_dach_korrigierter_tagesertrag
+  conditions:
+  - condition: template
+    value_template: '{{ (states(''sensor.pv_dach_korrigierter_tagesertrag'') | float
+      > states(''input_number.pv_dach_tagesertrag_old'') | float) }}'
+  - condition: time
+    after: 04:30:00
+    before: '23:59:00'
+  actions:
+  - data_template:
+      entity_id: input_number.pv_dach_tagesertrag_old
+      value: '{{ states(''sensor.pv_dach_korrigierter_tagesertrag'') | float }}'
+    action: input_number.set_value
+  mode: single
+- id: '1738524580135'
+  alias: PV Dach Tagesertrag zurücksetzen
+  description: ''
+  triggers:
+  - trigger: time
+    at: '23:59:00'
+  conditions: []
+  actions:
+  - action: input_number.set_value
+    metadata: {}
+    data:
+      value: 0
+    target:
+      entity_id: input_number.pv_dach_tagesertrag_old
+  mode: single
+- id: '1738690458255'
+  alias: Provisorische Heizung gem. Zeitplan
+  description: ''
+  triggers:
+  - entity_id:
+    - schedule.zeitplan_provisorische_heizung
+    trigger: state
+  conditions: []
+  actions:
+  - choose:
+    - conditions:
+      - condition: state
+        entity_id: schedule.zeitplan_provisorische_heizung
+        state: 'on'
+      sequence:
+      - action: switch.turn_on
+        metadata: {}
+        data: {}
+        target:
+          entity_id: switch.testgerat
+    - conditions:
+      - condition: state
+        entity_id: schedule.zeitplan_provisorische_heizung
+        state: 'off'
+      sequence:
+      - action: switch.turn_off
+        metadata: {}
+        data: {}
+        target:
+          entity_id: switch.testgerat
   mode: single
