--- a/data/configuration.yaml
+++ b/data/configuration.yaml
@@ -14,6 +14,7 @@ scene: !include scenes.yaml
 template: !include templates.yaml
 recorder: !include recorder.yaml
 
+import_statistics:
 
 cover:
   - platform: template
