--- a/data/configuration.yaml
+++ b/data/configuration.yaml
@@ -22,6 +22,7 @@ cover:
       garage_door:
         device_class: garage
         friendly_name: "Tor Tina"
+        unique_id: "garage_door"
         value_template: >-
           {% if is_state('binary_sensor.garagentor_tina_input','on') %}
             Closed
@@ -47,6 +48,7 @@ cover:
       garage_door_carsten:
         device_class: garage
         friendly_name: "Tor Carsten"
+        unique_id: "garage_door_carsten"
         value_template: >-
           {% if is_state('binary_sensor.garagentor_carsten_input','on') %}
             Closed
@@ -83,4 +85,3 @@ notify:
     number: "+491743137628" # the sender number
     recipients: # one or more recipients
       - "group.WkhUMjZiamhUdzZjQ3JwL3I4MFZWTHl4bVl5SC9jbTZDTldQNlA0NFBlbz0="
-
